# Sistema-de-An-lisis-de-Exportaciones-DIAN

./: .env  Documentacion_Export_Analytics.docx  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.etl  Dockerfile.frontend
frontend/: app.py
ml_models/: fob_predictor_metrics.json
src/: config.py
src/api/: main.py  queries.py  routes.py  schemas.py
src/db/: init_db.py  models.py  session.py
src/etl/: cleaner.py  column_map.py  exploratory_analysis.py  loader.py  pipeline.py
src/ml/: predictor.py
tests/: test_api.py  test_etl_cleaner.py
