[tool.poetry]
name = "export-analytics"
version = "0.1.0"
description = "Sistema de análisis de exportaciones DIAN - Formulario 600"
authors = ["Data Engineering Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
numpy = "^1.26"
openpyxl = "^3.1"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic = "^2.7"
pydantic-settings = "^2.2"
scikit-learn = "^1.5"
joblib = "^1.4"
streamlit = "^1.35"
plotly = "^5.22"
python-dotenv = "^1.0"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
